--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: GitHub, Motivation, HTML5, ReactJS, Machine Learing, Python, Sleeping
-percentage: 100, 35, 65, 80, 70, 90, 50
+aspects: Hadoop, Spark, SQL, Machine Learing, Data Manipulation, Visualization, Math, Statistics, Programming, GitHub, Motivation, Communication
+percentage: 35, 43, 68, 76, 85, 82, 90, 74, 88, 80, 99, 77
