--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -5,5 +5,5 @@
 - src: landing/music_cover.png
   title: banner image
 
-- src: landing/header_two.png
+- src: landing/cover.png
   title: second banner image
