--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -2,8 +2,5 @@
 # Add items for each banner image in the carousel
 #
 # Images are expected to be located in `static/assets/img/`.
-- src: landing/music_cover.png
+- src: landing/header_one.jpg
   title: banner image
-
-- src: landing/cover.png
-  title: second banner image
